fix: add thunbnail image to images folder and add to modal video to fix lack of  appearance on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -790,9 +790,9 @@ h1#four-zero-four {
   
 }
 
-/* =============================================================================== */
-/* =============== Large size devices - Desktops 992px to 1200px ================= */
-/* =============================================================================== */
+/* =============================================================================================== */
+/* =============== Large size devices - large tablets & Desktops 992px to 1200px ================= */
+/* =============================================================================================== */
 @media (min-width: 992px) and (max-width: 1200px) {
 
 /* Return home button for desktop/laptop screen sizes */
@@ -802,12 +802,3 @@ h1#four-zero-four {
 
 }
 
-
-/* =============================================================================== */
-/* =============== Extra Large size devices - Desktops 1440px and above ========== */
-/* =============================================================================== */
-@media (min-width: 1440px) {
-
- 
-
-}
